objectbox/lib/src/bindings/objectbox-c.dart

// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
import 'dart:ffi' as ffi;

/// Bindings to ObjectBox C-API
class ObjectBoxC {
  /// Holds the Dynamic library.
  final ffi.DynamicLibrary _dylib;

  /// The symbols are looked up in [dynamicLibrary].
  ObjectBoxC(ffi.DynamicLibrary dynamicLibrary) : _dylib = dynamicLibrary;

  /// /// Return the version of the library as ints. Pointers may be null
  void version(
    ffi.Pointer<ffi.Int32> major,
    ffi.Pointer<ffi.Int32> minor,
    ffi.Pointer<ffi.Int32> patch,
  ) {
    _version ??=
        _dylib.lookupFunction<_c_version, _dart_version>('obx_version');
    return _version(
      major,
      minor,
      patch,
    );
  }

  _dart_version _version;

  /// /// Check if the version of the library is equal to or higher than the given version ints.
  bool version_is_at_least(
    int major,
    int minor,
    int patch,
  ) {
    _version_is_at_least ??= _dylib.lookupFunction<_c_version_is_at_least,
        _dart_version_is_at_least>('obx_version_is_at_least');
    return _version_is_at_least(
          major,
          minor,
          patch,
        ) !=
        0;
  }

  _dart_version_is_at_least _version_is_at_least;

  /// /// Return the version of the library to be printed.
  /// /// The format may change in any future release; only use for information purposes.
  /// /// @see obx_version() and obx_version_is_at_least()
  ffi.Pointer<ffi.Int8> version_string() {
    _version_string ??=
        _dylib.lookupFunction<_c_version_string, _dart_version_string>(
            'obx_version_string');
    return _version_string();
  }

  _dart_version_string _version_string;

  /// /// Return the version of the ObjectBox core to be printed.
  /// /// The format may change in any future release; only use for information purposes.
  /// /// @see obx_version() and obx_version_is_at_least()
  ffi.Pointer<ffi.Int8> version_core_string() {
    _version_core_string ??= _dylib.lookupFunction<_c_version_core_string,
        _dart_version_core_string>('obx_version_core_string');
    return _version_core_string();
  }

  _dart_version_core_string _version_core_string;

  /// /// Checks whether the given feature is available in the currently loaded library.
  bool has_feature(
    int feature,
  ) {
    _has_feature ??= _dylib
        .lookupFunction<_c_has_feature, _dart_has_feature>('obx_has_feature');
    return _has_feature(
          feature,
        ) !=
        0;
  }

  _dart_has_feature _has_feature;

  /// /// Check whether functions returning OBX_bytes_array are fully supported (depends on build, invariant during runtime)
  /// /// @deprecated use obx_has_feature(OBXFeature_BytesArray) instead
  bool supports_bytes_array() {
    _supports_bytes_array ??= _dylib.lookupFunction<_c_supports_bytes_array,
        _dart_supports_bytes_array>('obx_supports_bytes_array');
    return _supports_bytes_array() != 0;
  }

  _dart_supports_bytes_array _supports_bytes_array;

  /// /// Check whether time series functions are available in the version of this library
  /// /// @deprecated use obx_has_feature(OBXFeature_TimeSeries) instead
  bool supports_time_series() {
    _supports_time_series ??= _dylib.lookupFunction<_c_supports_time_series,
        _dart_supports_time_series>('obx_supports_time_series');
    return _supports_time_series() != 0;
  }

  _dart_supports_time_series _supports_time_series;

  /// /// Delete the store files from the given directory
  int remove_db_files(
    ffi.Pointer<ffi.Int8> directory,
  ) {
    _remove_db_files ??=
        _dylib.lookupFunction<_c_remove_db_files, _dart_remove_db_files>(
            'obx_remove_db_files');
    return _remove_db_files(
      directory,
    );
  }

  _dart_remove_db_files _remove_db_files;

  /// /// Return the error status on the current thread and clear the error state.
  /// /// The buffer returned in out_message is valid only until the next call into ObjectBox.
  /// /// @param out_error receives the error code; optional: may be NULL
  /// /// @param out_message receives the pointer to the error messages; optional: may be NULL
  /// /// @returns true if an error was pending
  bool last_error_pop(
    ffi.Pointer<ffi.Int32> out_error,
    ffi.Pointer<ffi.Pointer<ffi.Int8>> out_message,
  ) {
    _last_error_pop ??=
        _dylib.lookupFunction<_c_last_error_pop, _dart_last_error_pop>(
            'obx_last_error_pop');
    return _last_error_pop(
          out_error,
          out_message,
        ) !=
        0;
  }

  _dart_last_error_pop _last_error_pop;

  /// /// The last error raised by an ObjectBox API call on the current thread, or OBX_SUCCESS if no error occurred yet.
  /// /// Note that API calls do not clear this error code (also true for this method).
  /// /// Thus, if you receive an error from this, it's usually a good idea to call obx_last_error_clear() to clear the error
  /// /// state (or use obx_last_error_pop()) for future API calls.
  int last_error_code() {
    _last_error_code ??=
        _dylib.lookupFunction<_c_last_error_code, _dart_last_error_code>(
            'obx_last_error_code');
    return _last_error_code();
  }

  _dart_last_error_code _last_error_code;

  /// /// The error message string attached to the error returned by obx_last_error_code().
  /// /// Like obx_last_error_code(), this is bound to the current thread, and this call does not clear the error state.
  /// /// The buffer returned is valid only until the next call into ObjectBox.
  ffi.Pointer<ffi.Int8> last_error_message() {
    _last_error_message ??=
        _dylib.lookupFunction<_c_last_error_message, _dart_last_error_message>(
            'obx_last_error_message');
    return _last_error_message();
  }

  _dart_last_error_message _last_error_message;

  /// /// The underlying error for the error returned by obx_last_error_code(). Where obx_last_error_code() may be a generic
  /// /// error like OBX_ERROR_STORAGE_GENERAL, this will give a further underlying and possibly platform-specific error code.
  int last_error_secondary() {
    _last_error_secondary ??= _dylib.lookupFunction<_c_last_error_secondary,
        _dart_last_error_secondary>('obx_last_error_secondary');
    return _last_error_secondary();
  }

  _dart_last_error_secondary _last_error_secondary;

  /// /// Clear the error state on the current thread; e.g. obx_last_error_code() will now return OBX_SUCCESS.
  /// /// Note that clearing the error state does not happen automatically;
  /// /// API calls set the error state when they produce an error, but do not clear it on success.
  /// /// See also: obx_last_error_pop() to retrieve the error state and clear it.
  void last_error_clear() {
    _last_error_clear ??=
        _dylib.lookupFunction<_c_last_error_clear, _dart_last_error_clear>(
            'obx_last_error_clear');
    return _last_error_clear();
  }

  _dart_last_error_clear _last_error_clear;

  /// /// Set the last error code and test - reserved for internal use from generated code.
  bool last_error_set(
    int code,
    int secondary,
    ffi.Pointer<ffi.Int8> message,
  ) {
    _last_error_set ??=
        _dylib.lookupFunction<_c_last_error_set, _dart_last_error_set>(
            'obx_last_error_set');
    return _last_error_set(
          code,
          secondary,
          message,
        ) !=
        0;
  }

  _dart_last_error_set _last_error_set;

  /// /// Create an (empty) data meta model which is to be consumed by obx_opt_model().
  /// /// @returns NULL if the operation failed, see functions like obx_last_error_code() to get error details.
  /// ///               Note that obx_model_* functions handle OBX_model NULL pointers (will indicate an error but not crash).
  ffi.Pointer<OBX_model> model() {
    _model ??= _dylib.lookupFunction<_c_model, _dart_model>('obx_model');
    return _model();
  }

  _dart_model _model;

  /// /// Only call when not calling obx_store_open() (which will free it internally)
  /// /// @param model NULL-able; returns OBX_SUCCESS if model is NULL
  int model_free(
    ffi.Pointer<OBX_model> model,
  ) {
    _model_free ??= _dylib
        .lookupFunction<_c_model_free, _dart_model_free>('obx_model_free');
    return _model_free(
      model,
    );
  }

  _dart_model_free _model_free;

  /// /// To minimise the amount of error handling code required when building a model, the first error is stored and can be
  /// /// obtained here. All the obx_model_XXX functions are null operations after the first model error has occurred.
  /// /// @param model NULL-able; returns OBX_ERROR_ILLEGAL_ARGUMENT if model is NULL
  int model_error_code(
    ffi.Pointer<OBX_model> model,
  ) {
    _model_error_code ??=
        _dylib.lookupFunction<_c_model_error_code, _dart_model_error_code>(
            'obx_model_error_code');
    return _model_error_code(
      model,
    );
  }

  _dart_model_error_code _model_error_code;

  /// /// To minimise the amount of error handling code required when building a model, the first error is stored and can be
  /// /// obtained here. All the obx_model_XXX functions are null operations after the first model error has occurred.
  /// /// @param model NULL-able; returns NULL if model is NULL
  ffi.Pointer<ffi.Int8> model_error_message(
    ffi.Pointer<OBX_model> model,
  ) {
    _model_error_message ??= _dylib.lookupFunction<_c_model_error_message,
        _dart_model_error_message>('obx_model_error_message');
    return _model_error_message(
      model,
    );
  }

  _dart_model_error_message _model_error_message;

  /// /// Starts the definition of a new entity type for the meta data model.
  /// /// After this, call obx_model_property() to add properties to the entity type.
  /// /// @param name A human readable name for the entity. Must be unique within the model
  /// /// @param entity_id Must be unique within this version of the model
  /// /// @param entity_uid Used to identify entities between versions of the model. Must be globally unique.
  int model_entity(
    ffi.Pointer<OBX_model> model,
    ffi.Pointer<ffi.Int8> name,
    int entity_id,
    int entity_uid,
  ) {
    _model_entity ??=
        _dylib.lookupFunction<_c_model_entity, _dart_model_entity>(
            'obx_model_entity');
    return _model_entity(
      model,
      name,
      entity_id,
      entity_uid,
    );
  }

  _dart_model_entity _model_entity;

  /// /// Refine the definition of the entity declared by the most recent obx_model_entity() call, specifying flags.
  int model_entity_flags(
    ffi.Pointer<OBX_model> model,
    int flags,
  ) {
    _model_entity_flags ??=
        _dylib.lookupFunction<_c_model_entity_flags, _dart_model_entity_flags>(
            'obx_model_entity_flags');
    return _model_entity_flags(
      model,
      flags,
    );
  }

  _dart_model_entity_flags _model_entity_flags;

  /// /// Starts the definition of a new property for the entity type of the last obx_model_entity() call.
  /// /// @param name A human readable name for the property. Must be unique within the entity
  /// /// @param type The type of property required
  /// /// @param property_id Must be unique within the entity
  /// /// @param property_uid Used to identify properties between versions of the entity. Must be global unique.
  int model_property(
    ffi.Pointer<OBX_model> model,
    ffi.Pointer<ffi.Int8> name,
    int type,
    int property_id,
    int property_uid,
  ) {
    _model_property ??=
        _dylib.lookupFunction<_c_model_property, _dart_model_property>(
            'obx_model_property');
    return _model_property(
      model,
      name,
      type,
      property_id,
      property_uid,
    );
  }

  _dart_model_property _model_property;
